fix alignment for svg icons

--- a/frontend-new/src/style.css
+++ b/frontend-new/src/style.css
@@ -321,3 +321,7 @@
             width: 24px;
             height: 24px;
         }
+
+        svg {
+            vertical-align: middle;
+        }
